crates/bityzba/tests/ui/fail/private_data_access.stderr
error[E0451]: fields `start` and `end` of struct `SpanData` are private
  --> tests/ui/fail/private_data_access.rs:14:33
   |
14 |     let _ = data!(model::Span { start: 0, end: 4 });
   |                                 ^^^^^     ^^^ private field
   |                                 |
   |                                 private field
